[package]
name = "twitch-stats-server"
version = "0.1.0"
authors = ["Eunchul Song <sech9446@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.14.1"
anyhow = "1.0"
env_logger = "0.6"
lazy_static = "1.3.0"

futures = "0.3"
actix-threadpool = "0.2.0"

actix-web = { version = "2.0.0", features = ["openssl"] }
openssl = "0.10"
actix-rt = "1.0.0"
actix-files = "0.2.1"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4.3", features = ["postgres","uuidv07", "r2d2", "chrono"] }
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.5", features = ["serde", "v4"] }
bytes = "0.4"
